js/src/tests/test262/built-ins/Error/tostring-2.js
assert
.
sameValue
(
Error
(
)
.
toString
(
)
'
Error
'
'
Error
(
)
.
toString
(
)
returns
"
Error
"
'
)
;
Error
.
prototype
.
toString
=
Object
.
prototype
.
toString
;
assert
.
sameValue
(
Error
(
)
.
toString
(
)
'
[
object
Error
]
'
'
Error
(
)
.
toString
(
)
returns
"
[
object
Error
]
"
(
Object
.
prototype
.
toString
)
'
)
;
reportCompare
(
0
0
)
;
